ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.2.0-rc1, 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • v4.2
    • Execution Team 2019-06-03, Execution Team 2019-06-17
    • 8
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In BF-13207, the waitWithPinnedCursorDuringGetMoreBatch fail point is used to reacquire the read lock between batches. However, the cursor used for these batches is not saved and restored while reacquiring the lock resulting in unexpected behaviour.

            Assignee:
            Gregory Wlodarek
            Reporter:
            Gregory Wlodarek
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: