SERVER-41461 waitWithPinnedCursorDuringGetMoreBatch fail point should save and restore the PlanExecutor state before reacquiring the read lock